--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "vue-router": "^3.1.2"
+        "vue-router": "^3.1.2",
+        "vuebar": "0.0.20"
     }
 }
