--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "vue-router": "^3.1.2",
-        "vuebar": "0.0.20"
+        "vuebar": "0.0.20",
+        "vuex": "^3.1.1"
     }
 }
